fixed store file: moved to background